--- a/client/src/components/Projects/Project.module.css
+++ b/client/src/components/Projects/Project.module.css
@@ -1,3 +1,15 @@
 .container {
 	display: flex;
+	background: linear-gradient(
+		92.43deg,
+		rgba(255, 255, 255, 0.78) 2.38%,
+		rgba(255, 255, 255, 0.79) 98.42%
+	);
+	box-shadow: 16px 16px 14px rgba(0, 0, 0, 0.1);
+	border-radius: 40px;
+	padding: 1rem 2rem;
+}
+
+.container img {
+	border-radius: 20px;
 }
