--- a/client/src/components/Projects/Projects.module.css
+++ b/client/src/components/Projects/Projects.module.css
@@ -2,7 +2,11 @@
 	display: flex;
 	justify-content: space-between;
 	flex-direction: column;
-	width: 70%;
+	width: 65%;
 	margin: auto;
 	height: 85%;
+}
+
+.projectsContainer {
+	overflow: scroll;
 }
